WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215374
REGRESSION (
r259805
): Not able to scroll vertically after scrolling horizontally without leaving message and coming back
https://bugs.webkit.org/show_bug.cgi?id=215374
Summary
REGRESSION (r259805): Not able to scroll vertically after scrolling horizonta...
Antti Koivisto
Reported
2020-08-11 08:38:25 PDT
Problems with overflow scrolling in Mail.
Attachments
patch
(3.63 KB, patch)
2020-08-11 08:54 PDT
,
Antti Koivisto
darin
: review+
Details
Formatted Diff
Diff
patch
(3.64 KB, patch)
2020-08-12 03:09 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2020-08-11 08:38:53 PDT
<
rdar://problem/65269837
>
Antti Koivisto
Comment 2
2020-08-11 08:54:27 PDT
Created
attachment 406382
[details]
patch
Darin Adler
Comment 3
2020-08-11 08:55:59 PDT
Comment on
attachment 406382
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=406382&action=review
Any way to make a regression test?
> Source/WebCore/ChangeLog:15 > + Dissallowed vertical scretch marks the event unhandled even though we are rubberbanding to horizontal direction.
Typo “scretch“
Antti Koivisto
Comment 4
2020-08-11 09:18:28 PDT
(In reply to Darin Adler from
comment #3
)
> Any way to make a regression test?
I suspect it would at least need an API test since the bug is not observable in Safari.
Antti Koivisto
Comment 5
2020-08-12 03:09:50 PDT
Created
attachment 406453
[details]
patch
EWS
Comment 6
2020-08-12 03:38:25 PDT
Committed
r265545
: <
https://trac.webkit.org/changeset/265545
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406453
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug